# python-thunderborg

./: .coveragerc  .flake8  .gitignore  .readthedocs.yaml  INSTALL.rst  LICENSE.md  Makefile  PAIR-BT.rst  README.rst  config.py  include.mk  mborg_joy.py  pyproject.toml  setup.py
docs/: Makefile
docs/source/: conf.py  configuration.rst  index.rst  modules.rst  tborg.examples.rst  tborg.init.rst  tborg.rst  tborg.tests.rst  tborg.utils.rst  usage.rst
docs/source/_static/css/: custom.css
requirements/: README.rst  approxeng.txt  base.txt  development.txt  freeze.txt  monsterweb.txt  pygame.txt
scripts/: start_mborg_approxeng.sh  start_mborg_pygame.sh  start_monster_web.sh
tborg/: __init__.py  tborg.py
tborg/examples/: controller.py  mborg_approxeng.py  mborg_joy.py  mborg_pygame.py  monster_web.py
tborg/examples/web/: __init__.py  monster_web.py
tborg/examples/web/templates/: hold.html  index.html  monster_web.js  photo.html  set.html  stream.html
tborg/scripts/: start_monster_web.sh
tborg/tests/: README.rst  test_tborg.py
tborg/utils/: daemon.py  daemonize.py
