#
# pyproject.toml
#
# Self install for testing only
# pip install -e . or pip install .
#

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tborg/tests"]

[build-system]
requires = ["hatchling", "wheel"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["tborg"]
exclude = ["tborg/tests*"]

[tool.hatch.build.targets.wheel]
only-include = ["tborg"]
exclude = ["tborg/tests*"]

#[project.scripts]
#your-script = "your_package.module:main_function"

[project]
name = "python-thunderborg"
version = "2.0.0"
description = "ThunderBorg Motor Controller API."
readme = "README.rst"
authors = [
  {name = "Carl J. Nobile", email = "carl.nobile@gmail.com"},
]
maintainers = [
  {name = "Carl J. Nobile", email = "carl.nobile@gmail.com"},
]
license-files = ["LICEN[CS]E*"]
dependencies = [
]
requires-python = ">= 3.10"
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  #"Programming Language :: Python :: 3.14",
]

[project.urls]
url = "https://github.com/cnobile2012/python-thunderborg"
Repository = "https://github.com/cnobile2012/python-thunderborg"
